* Added support for accessing session and application scope variables as properties of a source ExternalEvent.
* Added support for "inline-flows", local flow definitions fully nested within another flow definition.
* Added support for locally flow scoped artifacts, importable as bean definitions using the "import" element.
* Added a sessionEnding FlowExecutionListener callback.
* Added a KeyGenerator strategy, providing a plugin point for custom FlowExecution key generation strategies.
* Added "CompositeEvent" support for composite actions that may generate multiple action result events.
* Added ExternalEvent "sessionMap" and "applicationMap" properties for accessing session and application scoped 
  variables associated with a source event.
* Added model support for "state result events", where the parameters of events that drive a state transition can be
  accessed from views by referencing in the format ${stateId.parameterName}
* Added "requireValidatorMethod" property to FormAction, useful for supporting piecemeal validation as part of a wizard flow.
* Added ActionUtils utility class, useful when implementing actions.
* Added AbstractFlowBuilder addDecisionState(...) methods for completeness.
* Added a convenience constructor to the Event class that takes a single parameter name/value. Mainly for use in unit tests.
* Added a convenience constructor to the FormAction class that takes the formObjectClass name.
* Added logic in FormAction to automatically calculate a camelcase formObjectName from the formObjectClass if the name is not set.
* Added StatefulActionProxy, an action that delegates to a stateful action managed in flow scope.
* Added convenience methods for retrieving action execution properties to the AbstractAction class.
* Refactored out DataSourceAccessor strategy interface from FlowExecutionStorage implementations - this change resulted in
  some minor package moves and class renames in the webflow.execution package.